--- a/Order_Me.html
+++ b/Order_Me.html
@@ -18,7 +18,7 @@
         <div class="container">
             <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"><span
                     class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-            </a><a class="brand" href="Demo/index.html">Trader System </a>
+            </a><a class="brand" href="index.html">Trader System </a>
 
             <div class="nav-collapse">
                 <ul class="nav pull-right">
