--- a/Signup.html
+++ b/Signup.html
@@ -32,7 +32,7 @@
                 <span class="icon-bar"></span>
             </a>
 
-            <a class="brand" href="Demo/index.html">
+            <a class="brand" href="index.html">
                 Trader System
             </a>
 
@@ -45,7 +45,7 @@
 
                     </li>
                     <li class="">
-                        <a href="Demo/index.html" class="">
+                        <a href="index.html" class="">
                             <i class="icon-chevron-left"></i>
                             Back to Homepage
                         </a>
