--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<span class="icon-bar"></span>
 			</a>
 			
-			<a class="brand" href="Demo/index.html">
+			<a class="brand" href="index.html">
 				Trader System
 			</a>		
 			
