fixed some bugs

--- a/Order_History.html
+++ b/Order_History.html
@@ -30,7 +30,7 @@
                             class="icon-user"></i> EGrappler.com <b class="caret"></b></a>
                         <!--TODO : Change Username-->
                         <ul class="dropdown-menu">
-                            <li><a href="#">Logout</a></li>
+                            <li><a href="index.html">Logout</a></li>
                         </ul>
                     </li>
                 </ul>
