--- a/Setting.html
+++ b/Setting.html
@@ -28,7 +28,7 @@
                     <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" id="userNameArea"><i
                             class="icon-user"></i><b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Logout</a></li>
+                            <li><a href="index.html">Logout</a></li>
                         </ul>
                     </li>
                 </ul>
