--- a/charts.html
+++ b/charts.html
@@ -37,7 +37,7 @@
                             class="icon-user"></i> EGrappler.com <b class="caret"></b></a>
                             <ul class="dropdown-menu">
                                 <li><a href="javascript:;">Profile</a></li>
-                                <li><a href="javascript:;">Logout</a></li>
+                                <li><a href="index.html">Logout</a></li>
                             </ul>
                         </li>
                     </ul>
